Changes from FRESA.CAD 3.4.4 to FRESA.CAD version 3.4.5
	Enhancements:
	 	-RRPlot added to the library
		-adjustProb added to the library
		-ppoisGzero added to the library
		-meanTimeToEvent added to the library
		-CalibrationProbPoissonRisk added to the library
		-CoxRiskCalibration added to the library
		-getMedianSurvCalibratedPrediction added to the library
        -getMedianLogisticCalibratedPrediction added to the library

	Bugs: 
		-randomCV error with SVM fit corrected
		-try-chatch added to filteredFit.
	Other:
		-Bootrsapped 95CI methods are now visible.
Changes from FRESA.CAD 3.4.1 to FRESA.CAD version 3.4.4
	Enhancements:
		UnivariateFilters:
			All binary filters can handle multi class outcomes
		FilteredFit:
			Filteredfit now can handle CCA
			Now you can disable univariate filter
		Latent Class code revision.
 	 Bugs:
	 	PredictionStats
			-Fix interfase issue with newes version of epiR
	   IDeA bug with unaltered basis fixed.
	 Other:
	 	Code cleaning. Removing commented code.
		Renaming data GDSTMdecorrelation() to IDeA()
	 	
Changes from FRESA.CAD 3.3.1 to FRESA.CAD version 3.4.2
	Enhancements:
		Feature Decorrelation changed name now is: IDeA() and it has been enhanced with fast predictions.
		Now it has a predict funtion, and embeded into Filteredfit() funtion.
		Univariate filters now work with categorical outcomes
		Filteredfit() now removes features with p-values greater than the median p-value.
		Rewrite part of the code in latent class modeling HLCM_EM()
	 Interface Changes:
		Now RandomCV uses balanced training as default option

Changes from FRESA.CAD 3.1.1 to FRESA.CAD version 3.3.1
	Enhancements:
		nearestNeighborImpute now can handle longitudinal datasets
		Benchmarking Survival Models: CoxBenchmark
		Clustering algorithms: GMVECluster and clusterISODATA
		Latent Class Classification: HLCM and HLCM_EM
		Hybrid Learning methods: ClustClass and GMVEBSWiMS
		Longitudinal Features: trajectoriesPolyFeatures