@@ -1,3 +1,5 @@
+Changes from FRESA.CAD 3.4.5 to FRESA.CAD version 3.4.6
+	-Update to RRPlots and IDeA algorithms
 Changes from FRESA.CAD 3.4.4 to FRESA.CAD version 3.4.5
 	Enhancements:
 	 	-RRPlot added to the library
